# Shard

./: .gitignore  API.md  AUDIT_REPORT.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Dockerfile.api  Dockerfile.daemon  Dockerfile.inference  LICENSE  PARALLEL_EXECUTION_PLAN.md  README.md  add_debug.py  build_fix.bat  build_log.txt  debug_30mb.py  debug_size.py  dist_README.txt  docker-compose.yml  fix_indent.py  pack_shard.py  patch_bridge.py  patch_oracle.py  run_pitch_demo.bat  test_output.txt  test_req.json  vercel.json
.github/workflows/: ci.yml  global_release.yml
cpp/llama.cpp/ggml/src/: ggml.c  gguf.cpp
cpp/llama.cpp/ggml/src/ggml-cpu/: ggml-cpu.c  quants.c  quants.h
cpp/llama.cpp/src/: llama-arch.cpp
cpp/shard-bridge/: CMakeLists.txt  shard_bridge.cpp  shard_bridge.h
cpp/shard-bridge/include/: shard_bridge.h
deploy/nginx/: shard-wss.conf
desktop/control_plane/: buf.gen.yaml  buf.yaml  shard_control.proto
desktop/python/: .env.example  crash_handler.py  diag.py  golden_ticket.py  inference.py  inference_output.txt  init_full_log.txt  inspect_gguf.py  oracle_api.py  privacy_envelope.py  requirements.txt  resource_fetcher.py  run.py  shard_bridge.lib  test_dll.py  test_inference.py  test_inference_v2.py  test_inference_v3.py  test_init.py  test_init_local.py  test_init_out.txt  test_init_out_2.txt  test_init_out_3.txt  test_init_out_4.txt  test_init_out_5.txt  test_init_out_6.txt  test_init_trace.txt  test_init_v3.py  test_init_v4.py
desktop/python/bitnet/: __init__.py  ctypes_bridge.py
desktop/rust/: Cargo.toml  errors.txt  errors2.txt  errors3.txt  errors4.txt  errors5.txt  errors6.txt  errors7.txt  errors8.txt  errors9.txt  metadata.json
desktop/rust/src/: main.rs  telemetry_ws.rs
docs/: API.md  ARCHITECTURE.md  AUDIT_REPORT.md  INVESTOR_AUDIT_2026-02-13.md  PARALLEL_EXECUTION_PLAN.md  Shard-White-Paper-Feb-2026.md  agents.md  aws-wss-deployment-checklist.md  build_report.md  deployment-guide.md  heartbeat-mvp.md  network-topology-and-scaling.md  production-readiness-plan.md  release-hardening.md  speculative-verification.md  system-diagram.md  tech-stack.md  troubleshooting.md
docs/api/: api-reference.md  authentication.md  error-codes.md  index.md  openai-compatibility.md  streaming.md
docs/p2p-protocol/: README.md
installers/community-dashboard/: nodes.json
installers/homebrew/Formula/: shard.rb
installers/linux/: build-packages.sh
installers/macos/: build-dmg.sh
installers/windows/: shard.nsi
installers/winget/: manifest.yaml
python-sdk/: README.md  pyproject.toml
python-sdk/examples/: basic_stream.py
python-sdk/src/shard_client/: __init__.py  model.py  transport.py
python-sdk/tests/: test_model.py
scripts/: build_release.py  docker-entrypoint.sh  ec2-production-bootstrap.sh  find_vs.py  install.bat  installer.iss  patch_oracle.py  prepare_offline_deps.sh  run_pitch_demo.bat  verify_gen.py
tests/: bitnet_runtime_integration_test.py  control_plane_failure_test.py  inference_benchmark.py  inference_unit_test.py  oracle_api_security_test.py  release_test.py  useful_compute_verifier_test.py
web/: .env.example  LICENSE  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tsconfig.tsbuildinfo
web/__tests__/components/: ChatPanel.test.tsx  NetworkStatus.test.tsx
web/public/: manifest.json  sw.js  swarm-worker.js
web/src/: app.tsx  swarm.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/network/: page.tsx
web/src/components/: ChatPanel.tsx  ContributeButton.tsx  ErrorBoundary.tsx  Header.tsx  NetworkStatus.tsx  NetworkVisualizer.tsx  Providers.tsx  ThemeToggle.tsx
web/src/components/network/: SwarmThroughputCanvas.tsx  TelemetryStatCard.tsx  TopContributorsTable.tsx
web/src/hooks/: useSwarmTelemetry.ts
web/src/lib/: api.ts  browser-scout.ts  browser-scout.tsx  config.ts  discovery.ts  mockSwarmTelemetry.ts  p2p.ts  swarm.ts  verification.ts  webllm.ts
