[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shard-client"
version = "0.1.0"
description = "Drop-in Python client for routing generation through the local Shard Rust sidecar"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Shard Contributors" }]
dependencies = [
  "httpx>=0.27.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
hf = ["transformers>=4.40.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
