[package]
name = "shard-oracle-daemon"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.54", features = ["tokio", "kad", "gossipsub", "request-response", "noise", "yamux", "tcp", "websocket", "dns", "macros", "webrtc"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
