[package]
name = "shard-oracle-daemon"
version = "0.3.0"
edition = "2021"
description = "P2P networking sidecar for the Shard distributed inference network"

[[bin]]
name = "shard-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.54", features = [
    "tokio", "kad", "gossipsub", "request-response",
    "noise", "yamux", "tcp", "websocket", "dns", "macros",
] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "fs", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libp2p = { version = "0.54", features = [
    "tokio", "kad", "gossipsub", "request-response",
    "noise", "yamux", "tcp", "websocket", "dns", "macros", "webrtc",
] }

[profile.release]
opt-level = 3
lto = true
strip = true
