[package]
name = "shard-daemon"
version = "0.4.4"
edition = "2021"
description = "P2P networking sidecar for the Shard distributed inference network"

[[bin]]
name = "shard-daemon"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["json"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
futures = "0.3"
hex = "0.4"
libp2p = { version = "0.56.0", features = [
    "tokio", "kad", "gossipsub", "request-response",
    "noise", "yamux", "tcp", "websocket", "dns", "macros", "cbor",
    "relay", "dcutr", "autonat", "identify", "ping", "mdns", "quic",
] }
libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "sync", "fs", "net"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
strip = true
